--- a/Views/Shared/_LoginPartial.cshtml
+++ b/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@using Microsoft.AspNetCore.Identity
-@inject SignInManager<IdentityUser> SignInManager
-@inject UserManager<IdentityUser> UserManager
+@inject SignInManager<ApplicationUser> SignInManager
+@inject UserManager<ApplicationUser> UserManager
 
 <ul class="navbar-nav">
 @if (SignInManager.IsSignedIn(User))
@@ -9,10 +9,10 @@
         <a  class="nav-link text-dark" asp-area="Identity" asp-page="/Account/Manage/Index" title="Manage">Hello @User.Identity?.Name!</a>
     </li>
 
-    if(User.IsInRole("Admin"))
+    if(User.IsInRole("Teacher"))
     {
             <li class="nav-item">
-                <a class="nav-link text-dark"  href="@Url.Action("Administration", "Home", new { area = "" })">Administration</a>
+                <a class="nav-link text-dark"  href="@Url.Action("Index", "Admin", new { area = "" })">Administration</a>
             </li>
 
     }; 
