--- a/Areas/Identity/Pages/Account/Login.cshtml
+++ b/Areas/Identity/Pages/Account/Login.cshtml
@@ -40,9 +40,9 @@
                     </p>
 
                         <p>
-                        <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a>
+                        <!-- <a asp-page="./Register" asp-route-returnUrl="@Model.ReturnUrl">Register as a new user</a> -->
 
-                    
+
 
                     <p>
                         <a id="resend-confirmation" asp-page="./ResendEmailConfirmation">Resend email confirmation</a>
