--- a/Views/Admin/NewSubject.cshtml
+++ b/Views/Admin/NewSubject.cshtml
@@ -1,13 +1,27 @@
 ﻿@page
 @using Web3_Beadando.Models
-@using Web3_Beadando.Views.Admin
-@model Web3_Beadando.Views.Admin.NewSubjectModel
+@model Web3_Beadando.Models.Subject
 
 
 
 <h1>New Subject</h1>
 
-<form method="post">
+@using(Html.BeginForm("NewSubject", "Admin", FormMethod.Post))
+{
+        <div class="form-group">
+            <label for="subjectName">Subject name:</label>
+            @Html.TextBoxFor(x => x.Name, new {@class="form-control", placeholder="Subject"})
+        </div>
+
+             <div class="form-group">
+                <label for="subjectName">Teacher name:</label>
+            @Html.TextBoxFor(x => x.Teacher.FullName, new { @class = "form-control", placeholder = "Teacher"})
+            </div>
+
+            <button type="submit" class="btn btn-primary">Submit</button>
+}
+
+@* <form method="post" asp-action="NewSubject" asp-controller="Admin">
     <div class="form-group">
         <label for="subjectName">Subject Name:</label>
         <input type="text" class="form-control" id="subjectName" name="SubjectName" required>
@@ -15,11 +29,12 @@
 
     <div class="form-group">
         <label for="instructorName">Instructor Name:</label>
-         <select class="form-control" id="instructorName" name="SelectedTeacherId" asp-items="@(new SelectList(Model.Teachers, "Id", "FullName"))">
+         <select class="form-control" id="instructorName" name="SelectedTeacherId">
         
         <option value="">Select Instructor</option>
         </select>
     </div>
+          <input type="submit" />
 
-    <input type="submit" class="btn btn-primary" />
-</form>
+</form> *@
+    
