--- a/Views/Admin/NewClassroom.cshtml
+++ b/Views/Admin/NewClassroom.cshtml
@@ -1,4 +1,5 @@
-﻿@using Web3_Beadando.Models;
+﻿@using Web3_Beadando.Services;
+@model SchoolService
 @{
     ViewData["Title"] = "New Classroom";
 }
@@ -12,19 +13,47 @@
     </div>
 
     <div class="form-group">
-        <label for="subjectId">Subject:</label>
-        <select class="form-control" id="subjectId" name="SubjectId" required>
-            <option value="">Select a Subject</option>
-
-                <option value="test">test</option>
-
-        </select>
-    </div>
-
-    <div class="form-group">
         <label for="isLab">Is Lab:</label>
         <input type="checkbox" id="isLab" name="IsLab">
     </div>
 
+    <div class="form-group" id="subjectGroup">
+        <label for="subjectId">Subject:</label>
+        <select class="form-control" id="subjectId" name="SubjectId" required>
+            @{
+                SchoolService schoolService = new();
+
+                if (schoolService.subjects == null)
+                {
+                    <option>No subjects available</option>
+                }
+                else
+                {
+                    foreach (var subject in schoolService.subjects)
+                    {
+                        <option value="@subject.Id">@subject.Name</option>
+                    }
+                }
+            }
+        </select>
+    </div>
+
     <button type="submit" class="btn btn-primary">Add Classroom</button>
 </form>
+
+<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+<script>
+    $(document).ready(function () {
+        // Hide subject group initially
+        $("#subjectGroup").hide();
+
+        // Toggle subject group visibility on checkbox change
+        $("#isLab").change(function () {
+            if ($(this).is(":checked")) {
+                $("#subjectGroup").show();
+            } else {
+                $("#subjectGroup").hide();
+            }
+        });
+    });
+</script>
