--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -1,8 +1,47 @@
-﻿@{
-    ViewData["Title"] = "Home Page";
+﻿@page
+@using Web3_Beadando.Services 
+@model SchoolService
+@{
+    ViewBag.Greeting = "Home Page";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
-</div>
+
+
+@{
+    if (User.IsInRole("Student"))
+    {
+        <div class="text-center">
+            <h1>Home Page - Student</h1>
+            <br />
+
+            <a class="btn btn-primary" href="@Url.Action("Timetable", "Home", new { area = "" })">Timetable</a>
+
+            <a class="btn btn-primary" href="@Url.Action("Assignments", "Home", new { area = "" })">Assignments</a>
+
+            <a class="btn btn-primary" href="@Url.Action("Stats", "Home", new { area = "" })">Check assignment stats</a>
+
+            <a class="btn btn-primary" href="@Url.Action("Export", "Home", new { area = "" })">Export timetable</a>
+
+        </div>
+    }
+
+    else if(User.IsInRole("Teacher"))
+    {
+        <div class="text-center">
+
+            <h1>Home Page - Teacher</h1>
+            <br />
+
+            <a class="btn btn-primary" asp-area="Identity" asp-page="/Account/Register">Create a new user</a>
+
+            <a class="btn btn-primary" href="@Url.Action("NewSubject", "Admin", new { area = "" })">Add New Subject</a>
+
+            <a class="btn btn-primary" href="@Url.Action("NewClassroom", "Admin", new { area = "" })">Add New Classroom</a>
+
+            <a class="btn btn-primary" href="@Url.Action("NewClass", "Admin", new { area = "" })">Add new class</a>
+
+            <a class="btn btn-primary" href="@Url.Action("Assignments", "Admin", new { area = "" })">Add new assignment</a>
+
+        </div>
+    }
+}
