--- a/Views/Admin/NewSubject.cshtml
+++ b/Views/Admin/NewSubject.cshtml
@@ -4,7 +4,9 @@
 @using Web3_Beadando.Services
 @model SchoolService
 
-
+@{
+    //ViewData["Title"] = "New Subject";
+}
 
 <h1>New Subject</h1>
 @*
