--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -2,7 +2,7 @@
 @using Web3_Beadando.Services 
 @model SchoolService
 @{
-    ViewBag.Greeting = "Home Page";
+   // ViewData["Title"] = "Home";
 }
 
 
