--- a/Views/Admin/NewCategory.cshtml
+++ b/Views/Admin/NewCategory.cshtml
@@ -1,4 +1,5 @@
-﻿
+﻿@using Web3_Beadando.Services
+@model Web3_Beadando.Services.SchoolService
 @{
     ViewBag.Title = "New Category";
 }
@@ -11,4 +12,30 @@
     </div>
     <input type="submit" />
 </form>
+
+<!-- List all the categories in the db -->
+
+<table class="table">
+    <thead>
+        <tr>
+            <th>Category Name</th>
+            <th>Actions</th>
+        </tr>
+    </thead>
+    <tbody>
+        
+        @{
+            SchoolService schoolService = new();
+            foreach (var category in schoolService.categories)
+        {
+            <tr>
+                <td>@category.Name</td>
+                <td>
+                    <form method="post" asp-action="DeleteCategory" asp-route-id="@category.Id">
+                        <button type="submit" class="btn btn-primary">Delete</button>
+                    </form>
+                </td>
+            </tr>
+        }}
+    </tbody>
 
