--- a/Views/Admin/NewCategory.cshtml
+++ b/Views/Admin/NewCategory.cshtml
@@ -10,7 +10,7 @@
         <label for="CategoryName">Category Name:</label>
         <input type="text" class="form-control" id="CategoryName" name="CategoryName" required />
     </div>
-    <input type="submit" />
+    <button type="submit" class="btn btn-primary">Add</button>
 </form>
 
 <!-- List all the categories in the db -->
@@ -31,7 +31,7 @@
             <tr>
                 <td>@category.Name</td>
                 <td>
-                    <form method="post" asp-action="DeleteCategory" asp-route-id="@category.Id">
+                    <form method="post" asp-action="DeleteCategory" asp-route-id="@category.Id" onclick="return confirm('Are you sure you want to delete category: @category.Name ?')">
                         <button type="submit" class="btn btn-primary">Delete</button>
                     </form>
                 </td>
